--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -32,6 +32,7 @@
     "clsx": "^2.1.0",
     "formsnap": "^1.0.0",
     "lucide-svelte": "^0.365.0",
+    "mailtrap": "^3.3.0",
     "mode-watcher": "^0.3.0",
     "nodemailer": "^6.9.13",
     "pocketbase": "^0.21.1",
