--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,6 +31,7 @@
     "@types/nodemailer": "^6.4.14",
     "bits-ui": "^0.21.2",
     "clsx": "^2.1.0",
+    "cmdk-sv": "^0.0.17",
     "formsnap": "^1.0.0",
     "lucide-svelte": "^0.365.0",
     "mode-watcher": "^0.3.0",
